Modifs css page connexion + creation

--- a/style/style.css
+++ b/style/style.css
@@ -275,6 +275,7 @@ footer
     display: flex;
     align-items: center;
     margin-bottom: 4%;
+    width: 100%;
 }
 .trEmailMDP input
 {   
@@ -415,6 +416,7 @@ footer
 }
 /*********************************************************FIN PAGE INDEX*************************************************************/
 
+
 /*********************************************************DEBUT PAGE CREATION*************************************************************/
 .divCreationImpossible
 {
@@ -428,7 +430,6 @@ footer
     margin-bottom: 10%;
 
 }
-/*********************************************************FIN PAGE CREATION*************************************************************/
 .creation
 {
     display: grid;
@@ -470,6 +471,7 @@ footer
     display: flex;
     align-items: center;
     margin-bottom: 4%;
+    width: 100%;
 }
 .boutonsCreation
 {
@@ -634,3 +636,6 @@ tr{
 
 
 /*********************************************************FIN PAGES PRODUITS*************************************************************/
+
+/******************** DEBUT PAGE CONNEXION *********************/
+/******************** DEBUT PAGE CONNEXION *********************/
