--- a/style/style.css
+++ b/style/style.css
@@ -531,6 +531,7 @@ tr{
     display: block;
     transition: transform 0.1s;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    border: 1px solid red;
 }
 
 .imgProduit:hover{
